--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -1,5 +1,8 @@
-.mapBase{
-    height: 100%;
-    width: 100%;
-    position: none;
+.mapBase {
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    margin: 20px;
+    overflow: hidden;
 }
