--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,23 +1,4 @@
-.sidebar-content
-{
-    position: fixed;
-    right: 0;
-    top: 12%;
-    z-index: 1;
-    background-color:grey;
-    border-radius: 50px 0px 0px 50px;
-    background: #FFD;
-}
-.pnear{
-    color: #000;
-    font-family: Inter;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    padding-left: 2rem;
-}
-.near1,.near2,.near3,.near4,.news{
+.sidebar-div {
     width: 496px;
     height: 108px;
     flex-shrink: 0;
@@ -25,8 +6,9 @@
     padding-left: 1rem;
     border-radius: 30px;
     background: #D2DE32;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Apply box shadow */
 }
-.near-content{
+.near-content {
     padding-left: 1rem;
     color: #000;
     font-family: Inter;
@@ -35,12 +17,67 @@
     font-weight: 700;
     line-height: normal;
 }
-.news-content{
-    color: #000;
-    font-family: Inter;
-    font-size: 50px;
-    font-style: normal;
+.sidebar-content {
+    position: fixed;
+    right:0;
+    top: 5.5rem;
+    bottom: 0;
+    z-index: 1;
+    background-color: #27ae60;
+    color: #fff;
+    width: 330px;
+    padding: 20px;
+    border-radius: 10px 0 0 10px;
+    box-shadow: -3px 0px 10px rgba(0, 0, 0, 0.2);
+}
+.pnear {
+    font-size: 1.5rem;
+}
+.near1{
+    background-color: #D2DE32;;
+}
+.near2{
+    background-color: #D2DE32;
+}
+.near3{
+    background-color: #A2C579;
+}
+.near4{
+    background-color: #A2C579;
+}
+.near1, .near2, .near3, .near4, .news {
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    color: #fff;
+    transition: background-color 0.3s ease;
+}
+
+.near1:hover, .near2:hover, .near3:hover, .near4:hover, .news:hover {
+    background-color:#3498db;
+}
+
+.near-content {
+    font-size: 1.2rem;
+}
+.news{
+    height:20rem;
+    border: 2px solid #2ecc71;
+}
+.news-content {
+    background-color: #e74c3c;
+    color: #fff;
+    font-size: 1.6rem;
     font-weight: 700;
-    line-height: normal;
-    padding-left: 1rem;
+    padding: 15px;
+    border-radius: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+
+    &:hover {
+        background-color: #3498db;
+    }
 }
