--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,8 +6,7 @@
     margin: auto;
     z-index: 1;
     height: 5.5rem;
-    background-color: #007f5f; /* Teal green */
-    background-image: linear-gradient(to left, #007f5f, #00b48a);
+    background-color: #016a70; /* Teal green */
     color: #fff;
 }
 
